Fix title alignment

--- a/css/index.css
+++ b/css/index.css
@@ -41,8 +41,8 @@ img {
   text-align: center;
 }
 
-.right-align {
-  text-align: right;
+.left-align {
+  text-align: left;
 }
 
 /* masonry */
